<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:textAlignment="center"
        android:textSize="30sp"
        android:textColor="#FF6127"/>
    <EditText
        android:id="@+id/fname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/FullName"
        android:layout_marginTop="100dp"
        android:textSize="25sp"
        android:textAlignment="textEnd"
        android:padding="10dp"
        android:inputType="text"
        android:autofillHints="name"/>
    <EditText
        android:id="@+id/uid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/user"
        android:layout_marginTop="190dp"
        android:textSize="25sp"
        android:textAlignment="textEnd"
        android:padding="10dp"
        android:inputType="textEmailAddress"
        android:autofillHints="emailAddress"/>
    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:layout_marginTop="250dp"
        android:textSize="25sp"
        android:textAlignment="textEnd"
        android:padding="10dp"
        android:inputType="textPassword"
        android:autofillHints="password"/>
    <EditText
        android:id="@+id/Repassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/repassword"
        android:layout_marginTop="320dp"
        android:textSize="25sp"
        android:textAlignment="textEnd"
        android:padding="10dp"
        android:inputType="textPassword"
        android:autofillHints="password"/>
    <EditText
        android:id="@+id/Phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/Phonenumber"
        android:layout_marginTop="390dp"
        android:textSize="25sp"
        android:textAlignment="textEnd"
        android:padding="10dp"
        android:inputType="phone"
        android:autofillHints="phone"/>

    <Button
        android:id="@+id/submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="500dp"
        android:textAlignment="center"
        android:text="@string/Submit"
        android:textColor="#FFE928"
        android:textSize="25sp"
        android:padding="15dp"
        android:layout_marginStart="150dp"/>

</RelativeLayout>