<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:textAlignment="center"
        android:textSize="30sp"
        android:textColor="#FF6127"/>
    <EditText
        android:id="@+id/uid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/user"
        android:layout_marginTop="150dp"
        android:textSize="25sp"
        android:textAlignment="textEnd"
        android:padding="10dp"
        android:inputType="textEmailAddress"
        android:autofillHints="emailAddress"/>
    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:layout_marginTop="250dp"
        android:textSize="25sp"
        android:textAlignment="textEnd"
        android:padding="10dp"
        android:inputType="text"
        android:autofillHints="password"/>
    <Button
        android:id="@+id/signin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="500dp"
        android:textAlignment="center"
        android:text="@string/signin"
       android:textColor="#FFE928"
        android:textSize="25sp"
        android:padding="15dp"
        android:layout_marginStart="30dp"/>
    <Button
        android:id="@+id/signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="500dp"
        android:textAlignment="center"
        android:text="@string/Signup"
        android:textColor="#FFE928"
        android:textSize="25sp"
        android:padding="15dp"
        android:layout_marginStart="230dp"/>
</RelativeLayout>